[gd_scene load_steps=2 format=3 uid="uid://b05mgyb2eep3f"]

[ext_resource type="Script" uid="uid://c46j72gjd34j6" path="res://UI/QTE/qte_system.gd" id="1_qte"]

[node name="QTESystem" type="CanvasLayer"]
layer = 20
script = ExtResource("1_qte")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="QTEPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="QTEPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="QTEPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="QTEPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 36
text = "QUICK TIME EVENT"
horizontal_alignment = 1

[node name="SequenceLabel" type="Label" parent="QTEPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Key 1 / 3"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="QTEPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="KeyDisplayContainer" type="VBoxContainer" parent="QTEPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="KeyLabel" type="Label" parent="QTEPanel/MarginContainer/VBoxContainer/KeyDisplayContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 72
text = "Q"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="QTEPanel/MarginContainer/VBoxContainer/KeyDisplayContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "3.0 s"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="QTEPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="QTEPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="InstructionLabel" type="Label" parent="QTEPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Press the key!"
horizontal_alignment = 1
